[package]
name = "fhipe-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = "0.5"
rand = "0.8"
rayon = "1.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "ipe_bench"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "parallel_bench"
harness = false

[[bench]]
name = "prepared_bench"
harness = false

[[example]]
name = "v2_encrypt_demo"
path = "examples/v2/v2_encrypt_demo.rs"

[[example]]
name = "verify_v2_bases"
path = "examples/v2/verify_bases.rs"

[features]
default = []
